--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head> Тут Был САНЯ</head>
+<head></head>
 <body>
-<script>
-alert("Hello World!")
-</script>
+  <!-- <h1 align = 'middle'>РўРЈРў Р•РЎРўР¬ РЇ</h1> -->
+<script src ="script.js"></script>
 </body>
 </html>
