--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head></head>
 <body>
-  <!-- <h1 align = 'middle'>ТУТ ЕСТЬ Я</h1> -->
+<h1 align = 'middle'><font size = '100'>D.I.C.K Team</font></h1>
+<h1 align = 'middle'><font size = '50'>Сайты не дорого!!!!</font></h1>
+<h1 align = 'middle'><font size = '30'>Цена от 40$</font></h1>
+<script src ="script.js"></script>
+
 <script src ="script.js"></script>
 </body>
 </html>
