--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head></head>
 <body>
 <h1 align = 'middle'><font size = '100'>D.I.C.K Team</font></h1>
-<h1 align = 'middle'><font size = '50'>Сайты не дорого!!!!</font></h1>
+<h1 align = 'middle'><font size = '50'>Сайты недорого!!!!</font></h1>
 <h1 align = 'middle'><font size = '30'>Цена от 40$</font></h1>
 <script src ="script.js"></script>
 
