--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
-﻿<!DOCTYPE html>
-<html>
-<head></head>
-<body>
-<h1 align = 'middle'><font size = '100'>D.I.C.K Team</font></h1>
-<h1 align = 'middle'><font size = '50'>Сайты недорого!!!!</font></h1>
-<h1 align = 'middle'><font size = '30'>Цена от 40$</font></h1>
-<script src ="script.js"></script>
+<html lang="rus">
+<header>
+    <meta charset="utf-8">
+    <div class="header-bg">
+        <div class="semi-layer">
+            <div class="menu">
+                <div class="box2">
+                    <a href="index.html" class="menu-href">
+                        <img src="img/logo4.png" class="logo" alt="Главная страница">
+                    </a>
+                </div>
+<!--                <div class="box">-->
+<!--                    <a href="pay.html" class="menu-href" id="game">-->
+<!--                        <span>ИГРЫ</span>-->
+<!--                    </a>-->
+<!--                </div>-->
 
-<script src ="script.js"></script>
+                <div class="box">
+                    <a href="shop.html" class="menu-href" id="shop">
+                        <span>МАГАЗИН</span>
+                    </a>
+                </div>
+
+                <div class="box">
+                    <a href="news.html" class="menu-href" id="news">
+                        <span>НОВОСТИ</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<head>
+    <title>World of Warcraft</title>
+    <link rel="shortcut icon" href="/img/logo5.ico" type="image/x-icon">
+    <link rel="stylesheet" href="scratch.css">
+</head>
+<body>
+<div class="main">
+    <div class="video">
+        <iframe width="700" height="400" src="https://www.youtube.com/embed/s4gBChg6AII" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="main-text">
+        <article>
+            <h1>World Of Warcraft</h1>
+            Игра которую вы заслужили!<br>
+            Cразитесь с древним богом Н'Зотом и его приспешниками в новом рейде с 12 боссами — Ни’алоте, Пробуждающемся Городе.
+            Встретьтесь с противниками лицом к лицу на аренах и полях боя и испытайте свое мастерство в сложных подземельях,
+            открытых с помощью эпохальных ключей, чтобы получить восхитительные награды!
+        </article>
+        <div class="main-btn">
+            <div class="btn">
+                <button onclick="document.location='pay.html'">Купить</button>
+            </div>
+            <div class="btn">
+                <button>Подробнее</button>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
 </body>
 </html>
