--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
                 <button onclick="document.location='pay.html'">Купить</button>
             </div>
             <div class="btn">
-                <button>Подробнее</button>
+                <button onclick="document.location='detail.html'">Подробнее</button>
             </div>
         </div>
     </div>
 
 </div>
 
-
+<footer>
+    <p class="main-text" align="center">У нас нет прав 2000-2020. Платформы: PC, PS5, Xbox 365</p>
+</footer>
 
 </body>
 </html>
