--- a/news.html
+++ b/news.html
@@ -38,10 +38,10 @@
 <body>
     <div class="news-line">
         <div class="news">
-            <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+            <a href="detail.html">
                 <img src="img/hs-game.jpg" alt="HS" height="100" width="110" class="news-img">
             </a>
-            <article class="news-text"><a href="index.html" class="menu-href"><h1>Третья глава приключения «Пробуждение
+            <article class="news-text"><a href="detail.html" class="menu-href"><h1>Третья глава приключения «Пробуждение
                 Галакронда» — уже в игре!</h1></a>
                 В предыдущем эпизоде мы наблюдали
                 столкновение интересов наших героев и злодеев в храме Драконьего Покоя. Суперзлодей Рафаам вместе с
@@ -51,10 +51,10 @@
             </article>
         </div>
         <div class="news">
-            <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+            <a href="detail.html">
                 <img src="img/wow-game.jpg" alt="WOW" height="100" width="110" class="news-img">
             </a>
-            <article class="news-text"><a href="index.html" class="menu-href"><h1>Отмечаем Лунный Новый год в
+            <article class="news-text"><a href="detail.html" class="menu-href"><h1>Отмечаем Лунный Новый год в
                 Hearthstone!</h1></a>
                 Мы развешиваем фонарики и готовимся
                 встретить Лунный Новый год красиво! С 29 января в таверне начнется новая торжественная потасовка,
@@ -63,37 +63,39 @@
             </article>
         </div>
         <div class="news">
-            <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+            <a href="detail.html">
                 <img src="img/ow-game.jpg" alt="OVERWATCH" height="100" width="110" class="news-img">
             </a>
-            <article class="news-text"><a href="index.html" class="menu-href"><h1>Выход дополнения «Натиск драконов» состоялся!</h1></a>
+            <article class="news-text"><a href="detail.html" class="menu-href"><h1>Выход дополнения «Натиск драконов» состоялся!</h1></a>
                 Судьбоносный день настал. Рафаам и Лига ЗЛА перешли к заключительной части своего плана — воскрешению прародителя
                 драконов Галакронда. Но Лига исследователей намерена помешать злодеям... и в этом героям помогут другие драконы!
                 Взмойте в небеса, ведь дополнение «Натиск драконов» уже в игре!
             </article>
         </div>
         <div class="news">
-            <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+            <a href="detail.html">
                 <img src="img/hots-game.jpg" alt="HS" height="100" width="110" class="news-img">
             </a>
-            <article class="news-text"><a href="index.html" class="menu-href"><h1>Обновление Hearthstone — 5 декабря — «Натиск драконов»</h1></a>
+            <article class="news-text"><a href="detail.html" class="menu-href"><h1>Обновление Hearthstone — 5 декабря — «Натиск драконов»</h1></a>
                 Прочитайте наш обзор и узнайте о нововведениях в дополнении «Натиск драконов», в том числе о серьезных изменениях,
                 которые коснутся режима «Поля сражений», а также о том, как получить героя-жреца Тиранду и рубашку для карт
                 бесплатно после появления нового внутриигрового магазина!
             </article>
         </div>
         <div class="news">
-            <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+            <a href="detail.html">
                 <img src="img/wc3-game.jpg" alt="HS" height="100" width="110" class="news-img">
             </a>
-            <article class="news-text"><a href="index.html" class="menu-href"><h1>Обновление для Hearthstone от 8 октября: «Страх и прах»</h1></a>
+            <article class="news-text"><a href="detail.html" class="menu-href"><h1>Обновление для Hearthstone от 8 октября: «Страх и прах»</h1></a>
                 Вышло свежее обновление Hearthstone: в игре пройдет посвященное Тыквовину событие «Страх и прах», избранные карты из вольного формата
                 на время вернутся в стандартный, игроки в Hearthstone смогут получить особые портреты героев — и еще много интересного!
             </article>
         </div>
     </div>
 
-
+    <footer>
+        <p class="main-text" align="center">У нас нет прав 2000-2020. Платформы: PC, PS5, Xbox 365</p>
+    </footer>
 
 </body>
 </html>
