--- a/shop.html
+++ b/shop.html
@@ -39,31 +39,31 @@
     <div class="shop-games">
         <div class="games-line">
             <div class="game">
-                <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+                <a href="pay.html">
                     <img src="img/hs-game.jpg" alt="HS" height="200" width="220" class="shop-img">
                 </a>
                 <p class="shop-text">HearthStone</p>
             </div>
             <div class="game">
-                <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+                <a href="pay.html">
                     <img src="img/wow-game.jpg" alt="WOW" height="200" width="220" class="shop-img">
                 </a>
                 <p class="shop-text">World of Warcraft</p>
             </div>
             <div class="game">
-                <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+                <a href="pay.html">
                     <img src="img/ow-game.jpg" alt="OVERWATCH" height="200" width="220" class="shop-img">
                 </a>
                 <p class="shop-text">Overwatch</p>
             </div>
             <div class="game">
-                <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+                <a href="pay.html">
                     <img src="img/hots-game.jpg" alt="HS" height="200" width="220" class="shop-img">
                 </a>
                 <p class="shop-text">Heroes of The Storm</p>
             </div>
             <div class="game">
-                <a href="https://eu.shop.battle.net/ru-ru/family/world-of-warcraft?blzcmp=blizzard_hp_WorldofWarcraft_card">
+                <a href="pay.html">
                     <img src="img/wc3-game.jpg" alt="HS" height="200" width="220" class="shop-img">
                 </a>
                 <p class="shop-text">Warcraft 3: Reforged</p>
@@ -72,7 +72,9 @@
     </div>
 
 
-
+    <footer>
+        <p class="main-text" align="center" id="shop-footer">У нас нет прав 2000-2020. Платформы: PC, PS5, Xbox 365</p>
+    </footer>
 
 </body>
 </html>
