--- a/pay.html
+++ b/pay.html
@@ -56,7 +56,7 @@
             </p>
             </form>
             <div class="btn">
-                <button onclick="document.location='pay.html'" class="pay-btn">Оплатить</button>
+                <button onclick="document.location='index.html'" class="pay-btn">Оплатить</button>
                 <button onclick="document.location='index.html'" class="cancel-btn">Отмена</button>
             </div>
         </aside>
@@ -65,6 +65,8 @@
         <img src="img/pay.gif"  width="533" height="400" alt="ХЗ">
     </div>
 </div>
-
+<footer>
+    <p class="main-text" align="center">У нас нет прав 2000-2020. Платформы: PC, PS5, Xbox 365</p>
+</footer>
 </body>
 </html>
