--- a/index.html
+++ b/index.html
@@ -1,41 +1,17 @@
 <html lang="rus">
-<header>
-    <meta charset="utf-8">
-    <div class="header-bg">
-        <div class="semi-layer">
-            <div class="menu">
-                <div class="box2">
-                    <a href="index.html" class="menu-href">
-                        <img src="img/logo4.png" class="logo" alt="Главная страница">
-                    </a>
-                </div>
-<!--                <div class="box">-->
-<!--                    <a href="pay.html" class="menu-href" id="game">-->
-<!--                        <span>ИГРЫ</span>-->
-<!--                    </a>-->
-<!--                </div>-->
-
-                <div class="box">
-                    <a href="shop.html" class="menu-href" id="shop">
-                        <span>МАГАЗИН</span>
-                    </a>
-                </div>
-
-                <div class="box">
-                    <a href="news.html" class="menu-href" id="news">
-                        <span>НОВОСТИ</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
 <head>
     <title>World of Warcraft</title>
+    <meta charset="utf-8">
+    <link rel="import" href="template.php">
     <link rel="shortcut icon" href="/img/logo5.ico" type="image/x-icon">
     <link rel="stylesheet" href="scratch.css">
 </head>
 <body>
+<script>
+    var link = document.querySelector('link[rel=import]');
+    var content = link.import.querySelector('#base-head');
+    document.body.appendChild(content.cloneNode(true));
+</script>
 <div class="main">
     <div class="video">
         <iframe width="700" height="400" src="https://www.youtube.com/embed/s4gBChg6AII" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -60,9 +36,10 @@
 
 </div>
 
-<footer>
-    <p class="main-text" align="center">У нас нет прав 2000-2020. Платформы: PC, PS5, Xbox 365</p>
-</footer>
+<script>
+        var content = link.import.querySelector('#base-footer');
+        document.body.appendChild(content.cloneNode(true));
+</script>
 
 </body>
 </html>
